[*] Fix for flickering animations on mobile [*] Preload header footer first for speed

--- a/app/styles/_spinner.scss
+++ b/app/styles/_spinner.scss
@@ -58,7 +58,7 @@
   transition: all 4s !important;
   transition-duration: 2s !important;
   -webkit-transition-duration: 2s !important;
-
+  z-index: 1000000;
   font-family: "ProximaNova-Semibold","Helvetic Neue", Helvetica, Arial;
   letter-spacing: 2px;
 
