--- a/app/styles/_ui.scss
+++ b/app/styles/_ui.scss
@@ -37,15 +37,26 @@
 }
 .animated {
   visibility: visible !important;;
+  -webkit-backface-visibility: hidden;
   -vendor-animation-duration: 1s !important;
 }
 
+.wow {
+
+//  To fix flickering on safari
+  -webkit-backface-visibility: hidden;
+}
 img.round {
   border-radius: 6px;
 }
 .overlay {
   overflow-y: scroll;
   overflow-x: hidden;
+
+
+//  For mobile safari
+  -webkit-overflow-scrolling: touch;
+
   position: fixed;
   top: 0;
   left: 0;
